--- a/style.css
+++ b/style.css
@@ -803,13 +803,11 @@ footer {
     cursor: pointer;
   }
 
-  .previous_arrow button,
-  .next_arrow button {
+  .previous_arrow,
+  .next_arrow {
     cursor: pointer;
-    outline: none;
-    border: none;
-    color: transparent;
   }
+
   .schedule {
     margin: 2rem;
   }
